kubernetes/apps/sftpgo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sftpgo
  labels:
    app: sftpgo
spec:
  selector:
    matchLabels:
      app: sftpgo
  template:
    metadata:
      labels:
        app: sftpgo
    spec:
      containers:
        - name: app
          image: drakkan/sftpgo:distroless-slim
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 2022
              protocol: TCP
            - containerPort: 10080
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/sftpgo
              name: data
            - mountPath: /notes
              name: syncthing
              subPath: dropbox/notes
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sftpgo-pvc
        - name: syncthing
          persistentVolumeClaim:
            claimName: syncthing-pvc
        - name: rancher-key
          secret:
            secretName: rancher-key
            defaultMode: 0400
            items:
              - key: ssh-privatekey
                path: id_rsa
              - key: ssh-publickey
                path: id_rsa.pub
              - key: known_hosts
                path: known_hosts
