kubernetes/apps/sftpgo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sftpgo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - sftpgo.immortalkeep.com
      secretName: sftpgo-ingress-tls
  rules:
    - host: sftpgo.immortalkeep.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: sftpgo
                port:
                  number: 8080
